# CFPiHole

./: cloudflare.py  config.ini  main.py  pyproject.toml
.github/workflows/: check-cloudflare-token.yml  updateCF.yml
