[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cfpihole"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
configparser = "^7.0.0"
pandas = "^2.2.2"
poetry-dotenv = "^0.4.0"
python = "^3.11"
python-dotenv = "^1.0.1"
requests = "^2.32.2"
